Sat Jan 17 23:05:22 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp,bcmxcp_usb: Add readings from extended limit block, like max min
    voltage for transfer to trim/boost and to battery. Moved this code into separated
    functions. Also corrected power to voltage in the previous change, and some spelling.
    Change driver version to 0.21.

Tue Jan 15 00:15:23 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp,bcmxcp_usb: Add input.voltage.nominal, Change driver version to 0.20.

Wed Jan 14 23:43:00 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp,bcmxcp_usb: Change driver version to 0.19.

Wed Jan 14 23:35:10 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp.c: Add ups.power value.

Wed Jan 14 21:45:10 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp.c: Changed status info to include OL with BYPASS, BOOST, TRIM.
    Add some more meters like power and current.nominal (max).

Wed Jan 14 22:22:51 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - tools/Makefile.am: fix the name of the "dist-hook" rule, which triggers the
   USB files regeneration upon calling "make dist"

Wed Jan 14 21:59:47 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 * Eaton update:
   - drivers/{mge-shut.c,mge-shut.h,mge-hid.c}, data/driver.list:
     - add more models, like Nova AVR 625 and 1250, and renamed models,
     - if a model name can't be matched, concatenate iProduct and iModel. The
       next step is to only manage exceptions since the above rule is now the
       standard.
     
Wed Jan 14 21:55:47 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 * Rework the NUT Python support tree:
   - scripts/python/module: moved a level up since PyNUT will also provide a
     configuration class in the future,
   - scripts/python/module/PyNUT.py: revert the name from PyNUTClient to PyNUT,